# customer-support-openenv

./: README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  environment.py  grader.py  main.py  models.py  tasks.py
customer_support_openenv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
