[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "Customer support environment"
authors = [{name = "Abhiram"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"