[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "Customer support environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "python-dotenv",
    "huggingface_hub",
    "httpx"
]

[tool.uv]
package = true

[project.scripts]
server = "app.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"